--- a/src/main/resources/templates/activation.html
+++ b/src/main/resources/templates/activation.html
@@ -4,12 +4,8 @@
 <title>Online nyelvtanulás - Aktiválás</title>
 </head>
 <body>
-
-	<div layout:fragment="loginContent">
-
-			<h2 class="form-signin-heading">Sikeres regisztrálás</h2>
-
+	<div layout:fragment="pageContent">
+		<h2 class="form-signin-heading">Sikeres regisztrálás</h2>
 	</div>
-
 </body>
 </html>
