--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -4,12 +4,8 @@
 	<title>Online nyelvtanulás</title>
 </head>
 <body>
-		
-	<div layout:fragment="loginContent">
-		
+	<div layout:fragment="pageContent">
 		<h2>Oldal 2.</h2>
-
 	</div>
-		
 </body>
 </html>
