--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,8 @@
 	<title>Online nyelvtanulás</title>
 </head>
 <body>
-		
-	<div layout:fragment="loginContent">
-		
+	<div layout:fragment="pageContent">
 		<h2>Kezdőoldal</h2>
-
 	</div>
-
 </body>
 </html>
