--- a/src/main/resources/templates/layouts/main.html
+++ b/src/main/resources/templates/layouts/main.html
@@ -19,38 +19,41 @@
 	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+
 </head>
 <body>
-
 	<div class="container">
-  		 
 		<nav class="navbar navbar-default">
 		    <div class="container-fluid">
-		       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				    <ul class="nav navbar-nav">
+				<div class="navbar-header" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
+					<button type="button" class="navbar-toggle collapsed navbar-toggle-center navbar-menu-button" data-toggle="collapse" data-target="#bs-navbar-collapse-1" aria-expanded="false">
+						<span class="glyphicon glyphicon-menu-hamburger"></span>
+						<span class="navmenu">Menü</span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+					<ul class="nav navbar-nav">
 				        <li th:class="${page} == 'index' ? active : passive" class=""><a href="/">Kezdőoldal</a></li>
 				        <li th:class="${page} == 'page1' ? active : passive" class=""><a href="/page1">Oldal 1</a></li>
 				        <li th:class="${page} == 'page2' ? active : passive" class=""><a href="/page2">Oldal 2</a></li>
 				    </ul>
 				    <div class="navbar-text navbar-right">
-			           <form sec:authorize="isAuthenticated()" id="frmlogout" th:action="@{/logout}" method="post" class="form-inline">
-						    Üdvözöljük <span sec:authentication="name">Anonymous </span>
-				    		| <a href="javascript:{}" onclick="document.getElementById('frmlogout').submit(); return false;">Kijelentkezés</a>
-				      </form>
+						<form sec:authorize="isAuthenticated()" id="formlogout" th:action="@{/logout}" method="post" class="form-inline">
+						    Bejelentkezve: <a th:href="@{/profile}"><span sec:authentication="name">Anonymous </span></a>
+				    		| <a href="javascript:{}" onclick="document.getElementById('formlogout').submit(); return false;">Kijelentkezés</a>
+						</form>
 				    </div>
 				</div>
 		    </div>
 		</nav>
 		
-		<div layout:fragment="loginContent">
+		<div layout:fragment="pageContent">
 		</div>
-
 
 		<div class="spacer150"/>
 		<footer>
 			<p>Online nyelvtanulás © 2020- Minden jog fenntartva!</p>
 		</footer>
-	
 	</div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
