--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -4,13 +4,8 @@
 	<title>Online nyelvtanulás</title>
 </head>
 <body>
-		
-	<div layout:fragment="loginContent">
-		
+	<div layout:fragment="pageContent">
 		<h2>Oldal 1.</h2>
-
 	</div>
-		
-		
 </body>
 </html>
