--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,22 +4,18 @@
 <title>Online nyelvtanulás - Regisztráció</title>
 </head>
 <body>
-
-	<div layout:fragment="loginContent">
-
+	<div layout:fragment="pageContent">
 		<form name="registration" th:action="@{/reg}" th:object="${user}" method="post" class="form-signin">
-			<div id="result" th:if="${result} == 'alreadyExists'" class="alert alert-danger">Már létezik regisztráció ilyen email címmel</div>
-			<div id="result" th:if="${result} == 'emptyEmail'" class="alert alert-danger">Nem lehet a regisztrációnál megadott email cím üres</div>
-			<div id="result" th:if="${result} == 'emptyName'" class="alert alert-danger">Nem lehet a regisztrációnál megadott név üres</div>
-			<div id="result" th:if="${result} == 'emptyPassword'" class="alert alert-danger">Nem lehet a regisztrációnál megadott jelszó üres</div>
+			<div id="result" th:if="${result} == 'user_email_already_exists'" class="alert alert-danger">Már létezik regisztráció ilyen email címmel</div>
+			<div id="result" th:if="${result} == 'empty_email'" class="alert alert-danger">Nem lehet a regisztrációnál megadott email cím üres</div>
+			<div id="result" th:if="${result} == 'empty_name'" class="alert alert-danger">Nem lehet a regisztrációnál megadott név üres</div>
+			<div id="result" th:if="${result} == 'empty_password'" class="alert alert-danger">Nem lehet a regisztrációnál megadott jelszó üres</div>
 			<h2 class="form-signin-heading">Adatok megadása</h2>
 				<input type="text" id="fullName" name="fullName" th:field="*{fullName}" class="form-control" placeholder="Teljes név"  /> 
 		 	    <input type="text" id="email" name="username" th:field="*{email}" class="form-control" placeholder="E-mail cím"  /> 
 			    <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Jelszó" />
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Regisztráció</button>
 		</form>
-
 	</div>
-
 </body>
 </html>
