--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" layout:decorator="layouts/main">
 <head>
-	<title th:text='#{pageTitle}'>Online nyelvtanulás - Bejelentkezés</title>
+	<title th:text='#{pagetitle.login}'>Online nyelvtanulás - Bejelentkezés</title>
 </head>
 <body>
 	<div layout:fragment="pageContent">
