--- a/src/main/resources/templates/detailedError.html
+++ b/src/main/resources/templates/detailedError.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title th:text="${pageTitle}">Online nyelvtanulás</title>
+    <title th:text="#{pagetitle.errorpage}">Online nyelvtanulás</title>
     
     <link rel="stylesheet" th:href="@{css/style.css}" href="../static/css/style.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
