--- a/src/main/resources/templates/forgotten_password.html
+++ b/src/main/resources/templates/forgotten_password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en" layout:decorator="layouts/main">
 <head>
-<title>Online nyelvtanulás - Elfelejtett jelszó</title>
+<title th:text='#{pagetitle.forgotten_password}'>Online nyelvtanulás - Elfelejtett jelszó</title>
 </head>
 <body>
 	<div layout:fragment="pageContent">
