--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,10 +11,11 @@
 			<div id="result" th:if="${result} == 'empty_name'" class="alert alert-danger">Nem lehet a regisztrációnál megadott név üres</div>
 			<div id="result" th:if="${result} == 'empty_password'" class="alert alert-danger">Nem lehet a regisztrációnál megadott jelszó üres</div>
 			<h2 class="form-signin-heading">Adatok megadása</h2>
-				<input type="text" id="fullName" name="fullName" th:field="*{fullName}" class="form-control" placeholder="Teljes név"  /> 
-		 	    <input type="text" id="email" name="username" th:field="*{email}" class="form-control" placeholder="E-mail cím"  /> 
-			    <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Jelszó" />
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Regisztráció</button>
+				<input type="text" id="fullName" name="fullName" th:field="*{fullName}" class="form-control" placeholder="Teljes név"/> 
+		 	    <input type="text" id="email" name="username" th:field="*{email}" class="form-control" placeholder="E-mail cím"/>
+			    <input type="password" id="password" name="password" th:field="*{password}"  class="form-control" placeholder="Jelszó"/>
+		 	    <input type="password" id="confirmpassword" class="form-control" placeholder="Jelszó újra"/>
+			<button class="btn btn-lg btn-primary btn-block" type="submit" name="registration">Regisztráció</button>
 		</form>
 	</div>
 </body>
