--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -76,6 +76,18 @@ address {
     border-color: #23c436;
 }
 
+.form-signin input[type="text"] {
+    margin-bottom: 3px;
+}
+
+.form-signin input[type="password"] {
+    margin-bottom: 3px;
+}
+
+button[type="submit"] {
+	margin-top: 15px;
+}
+
 .spacer150 {
 	height: 150px;
 	margin: 0 auto;
