--- a/src/main/resources/templates/forgotten_password_activation.html
+++ b/src/main/resources/templates/forgotten_password_activation.html
@@ -14,10 +14,9 @@
 				<h2 class="form-signin-heading">Jelszó megadása</h2>
 		 	    <input type="text" id="email" name="username" th:field="*{email}" class="form-control disabled" placeholder="E-mail cím" value="${user.email}"/>
 			    <input type="password" id="password" name="password" th:field="*{password}" class="form-control" placeholder="Jelszó" required="true" />
-			    <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="Jelszó újra" required="true" />
+			    <input type="password" id="confirm_password" class="form-control" placeholder="Jelszó újra" required="true" />
 			    <input type="hidden" id="activation" name="code" th:field="*{activation}" class="form-control"/>
-		 	    <br/>
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Új jelszó beállítása</button>
+				<button class="btn btn-lg btn-primary btn-block" type="submit" name="submit">Új jelszó beállítása</button>
 			</div>
 			<div th:unless="${result} != 'invalid_activation_code'">
 				<br/>
